--- a/index.html
+++ b/index.html
@@ -4,61 +4,81 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
-    <header>
+    <header class="page-header">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a class="logotype link" href="./index.html"
+          ><span style="color: #4d5ae5">Web</span
+          ><span style="color: #2e2f42">Studio</span></a
+        >
+        <ul class="menu list">
+          <li class="menu-item"><a class="menu-link link" href="">Studio</a></li>
+          <li class="menu-item"><a class="menu-link link" href="">Portfolio</a></li>
+          <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="address list">
+          <li>
+            <a class="address link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="address link " href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-
       <!--Section 1-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section  class="first-section">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <button type="button" ><span class="button-name">Order Service</span></button>
       </section>
 
       <!--Section 2-->
       <section>
-        <h2 class="hidden-h2">Feachers</h2>
-        <ul>
+        <h2 class="hidden-heading">Features</h2>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="feature-name">Strategy</h3>
+            <p class="feature-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="feature-name">Punctuality</h3>
+            <p class="feature-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="feature-name">Diligence</h3>
+            <p class="feature-description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="feature-name">Technologies</h3>
+            <p class="feature-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -67,56 +87,126 @@
       </section>
 
       <!--Section 3-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team-section">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="list">
+          <li class="team-card">
             <img
               src="./images/markguerro.jpg"
               alt="MarkGuerro"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-member">Mark Guerrero</h3>
+            <p class="position">Product Designer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/tomford.jpg"
               alt="TomFord"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-member">Tom Ford</h3>
+            <p class="position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/camilagarcia.jpg"
               alt="CamilaGarcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-member">Camila Garcia</h3>
+            <p class="position">Marketing</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/danielwilson.jpg"
               alt="DanielWilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-member">Daniel Wilson</h3>
+            <p class="position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <!--Section 4-->
+      <section>
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="list">
+          <li class="project-card">
+            <img
+              src="./images/ourportfolio/bankingapp.jpg"
+              alt="bankingapp"
+              width="360"
+              height="300"
+            />
+            <h3 class="card-content">Banking App</h3>
+            <p class="card-text">App</p>
+          </li>
+          <li class="project-card">
+            <img
+              src="./images/ourportfolio/cashlesspayment.jpg"
+              alt="cashlesspayment"
+              width="360"
+              height="300"
+            />
+            <h3 class="card-content">Cashless Payment</h3>
+            <p class="card-text">Marketing</p>
+          </li>
+          <li class="project-card">
+            <img
+              src="./images/ourportfolio/meditationapp.jpg"
+              alt="meditationapp"
+              width="360"
+              height="300"
+            />
+            <h3 class="card-content">Meditation App</h3>
+            <p class="card-text">App</p>
+          </li>
+          <li class="project-card">
+            <img
+              src="./images/ourportfolio/taxiservice.jpg"
+              alt="taxiservice"
+              width="360"
+              height="300"
+            />
+            <h3 class="card-content">Taxi Service</h3>
+            <p class="card-text">Marketing</p>
+          </li>
+          <li class="project-card">
+            <img
+              src="./images/ourportfolio/screenillustrations.jpg"
+              alt="screenillustrations"
+              width="360"
+              height="300"
+            />
+            <h3 class="card-content">Screen Illustrations</h3>
+            <p class="card-text">Design</p>
+          </li>
+          <li class="project-card">
+            <img
+              src="./images/ourportfolio/onlinecourses.jpg"
+              alt="onlinecourses"
+              width="360"
+              height="300"
+            />
+            <h3 class="card-content">Online Courses</h3>
+            <p class="card-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logotype link" href="./index.html"
+          ><span style="color: #4D5AE5">Web</span
+          ><span style="color: #F4F4FD">Studio</span></a
+        >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
