--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
     <header class="page-header">
       <nav>
         <a class="logotype link" href="./index.html"
-          ><span style="color: #4d5ae5">Web</span
-          ><span style="color: #2e2f42">Studio</span></a
+          >Web <span style="color: #2e2f42">Studio</span></a
         >
         <ul class="menu list">
-          <li class="menu-item"><a class="menu-link link" href="">Studio</a></li>
-          <li class="menu-item"><a class="menu-link link" href="">Portfolio</a></li>
-          <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
+          <li class="menu-item">
+            <a class="menu-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="address list">
           <li>
             <a class="address link" href="mailto:info@devstudio.com"
@@ -38,7 +43,9 @@
             >
           </li>
           <li>
-            <a class="address link " href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="address link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -46,14 +53,14 @@
 
     <main>
       <!--Section 1-->
-      <section  class="first-section">
+      <section class="first-section">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" ><span class="button-name">Order Service</span></button>
+        <button type="button" class="button">Order Service</button>
       </section>
 
       <!--Section 2-->
       <section>
-        <h2 class="hidden-heading">Features</h2>
+        <h2 hidden>Features</h2>
         <ul class="list">
           <li>
             <h3 class="feature-name">Strategy</h3>
@@ -98,7 +105,7 @@
               height="260"
             />
             <h3 class="team-member">Mark Guerrero</h3>
-            <p class="position">Product Designer</p>
+            <p class="role">Product Designer</p>
           </li>
           <li class="team-card">
             <img
@@ -108,7 +115,7 @@
               height="260"
             />
             <h3 class="team-member">Tom Ford</h3>
-            <p class="position">Frontend Developer</p>
+            <p class="role">Frontend Developer</p>
           </li>
           <li class="team-card">
             <img
@@ -118,7 +125,7 @@
               height="260"
             />
             <h3 class="team-member">Camila Garcia</h3>
-            <p class="position">Marketing</p>
+            <p class="role">Marketing</p>
           </li>
           <li class="team-card">
             <img
@@ -128,7 +135,7 @@
               height="260"
             />
             <h3 class="team-member">Daniel Wilson</h3>
-            <p class="position">UI Designer</p>
+            <p class="role">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -203,9 +210,8 @@
 
     <footer class="footer">
       <a class="logotype link" href="./index.html"
-          ><span style="color: #4D5AE5">Web</span
-          ><span style="color: #F4F4FD">Studio</span></a
-        >
+        >Web<span style="color: #f4f4fd">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
