--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
     <footer class="footer">
       <a class="logotype link" href="./index.html"
-        >Web<span style="color: #f4f4fd">Studio</span></a
+        >Web<span class="logo" style="color: #f4f4fd">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
